tests/negative/parser/err_missing_paren.ual
-- Parser error test: missing closing parenthesis
@stack = stack.new(i64
@stack push(1)
